# financial-risk-insights-platform

./: .gitignore  DEVELOPMENT_SETUP.md  README.md  docker-compose.yml  railway.toml  setup-database.sh  start-postgresql.sh
.github/: CI_CD_README.md
.github/workflows/: ci.yml  dotnet-ci.yml  test-ci.yml  test-quant-models.yml
backend/: .gitignore  FinancialRisk.sln  README.md  SETUP_POSTGRESQL.md  railway.toml  run-tests.sh
backend/FinancialRisk.Api/: FinancialRisk.Api.csproj  FinancialRisk.Api.http  Program.cs  appsettings.Development.json  appsettings.json
backend/FinancialRisk.Api/Data/: FinancialRiskDbContext.cs
backend/FinancialRisk.Api/Extensions/: ServiceCollectionExtensions.cs
backend/FinancialRisk.Api/Models/: Asset.cs  FinancialApiConfig.cs  FinancialData.cs  Portfolio.cs  PortfolioBuilderModels.cs  PortfolioHolding.cs  Price.cs  RiskMetrics.cs  VaRModels.cs
backend/FinancialRisk.Api/Properties/: launchSettings.json
backend/FinancialRisk.Api/Services/: AlphaVantageService.cs  CMakeLists.txt  CppInteropService.cs  DataPersistenceService.cs  DataSeederService.cs  DatabaseMigrationService.cs  Dockerfile  GrpcPythonService.cs  GrpcPythonService.cs.bak  IDataPersistenceService.cs  IFinancialDataService.cs  IPortfolioBuilderService.cs  IPortfolioOptimizationService.cs  IPythonInteropService.cs  MONTE_CARLO_README.md  MonteCarloEngine.cpp  MonteCarloEngine.h  PORTFOLIO_OPTIMIZATION_README.md  PYTHON_CPP_INTEROP_README.md  PortfolioBuilderService.cs  PortfolioOptimizationService.cs  PythonInteropService.cs  QuantEngine.cpp  QuantEngine.h  README.md  RiskCalculations.cpp  RiskCalculations.dylib  RiskCalculations.h  RiskMetricsService.cs  RiskMetricsServiceFallback.cs  UnifiedInteropService.cs  VaRCalculationService.cs  VaRCalculationServiceFallback.cs  VaRCalculations.cpp  VaRCalculations.h  app.py  build-cpp.sh  build-monte-carlo.sh  demo-cpp-integration.sh  demo-var-implementation.sh  (+9 more)
backend/FinancialRisk.Api/Services/python_models/: quant_models.py
backend/FinancialRisk.Api/controllers/: AssetsController.cs  FinancialDataController.cs  HealthController.cs  InteropController.cs  MonteCarloController.cs  PortfolioBuilderController.cs  PortfolioOptimizationController.cs  PortfoliosController.cs  RiskMetricsController.cs  VaRController.cs
backend/FinancialRisk.Tests/: ApiControllerTests.cs  ApiControllerTests.cs.disabled  AssetsApiIntegrationTests.cs  DataPersistenceServiceTests.cs  DatabaseContextTests.cs  FinancialDataServiceTests.cs  FinancialDataServiceTests.cs.disabled  FinancialRisk.Tests.csproj  HealthControllerTests.cs  IntegrationTests.cs  IntegrationTests.cs.disabled  InteropServiceTests.cs  MonteCarloEngineTests.cs  MonteCarloEngineTests.cs.disabled  MonteCarloSimulationTests.cs  MonteCarloSimulationTests.cs.disabled  PortfolioOptimizationTests.cs  PortfolioOptimizationTests.cs.disabled  PricingModelTests.cs  PricingModelTests.cs.disabled  RiskMetricsApiIntegrationTests.cs.disabled  RiskMetricsServiceMockTests.cs.disabled  RiskMetricsServiceTests.cs.disabled  RiskModelTests.cs  RiskModelTests.cs.disabled  SimpleTests.cs  StatisticalModelTests.cs  StatisticalModelTests.cs.disabled  TestRunner.cs  UNIT_TESTS_README.md  UnitTest1.cs
data/: schea.sql  schema.sql
frontend/FinancialRisk.Frontend/: App.razor  FinancialRisk.Frontend.csproj  Program.cs  README.md  _Imports.razor  appsettings.json  railway.toml
frontend/FinancialRisk.Frontend/Components/: NavMenu.razor  PortfolioManager.razor
frontend/FinancialRisk.Frontend/Layout/: MainLayout.razor
frontend/FinancialRisk.Frontend/Models/: ApiResponse.cs  EfficientFrontierModels.cs  PortfolioBuilderModels.cs  PortfolioModels.cs  RiskMetricsModels.cs  VaRModels.cs
frontend/FinancialRisk.Frontend/Pages/: EfficientFrontier.razor  Home.razor  Index.razor  MonteCarloSimulation.razor  PortfolioBuilder.razor  PortfolioOptimization.razor  RiskDashboard.razor  (+1 more)
(+14 files in other folders)
